# Smol-Boy

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
lib/argpars/: argpars.hpp
src/common/: Common.hpp  Defines.hpp  Log.cpp  Log.hpp  Types.hpp  Utility.hpp
src/emulator/: CMakeLists.txt
src/emulator/core/: Cartridge.cpp  Cartridge.hpp  GBCommon.hpp  Gameboy.cpp  Gameboy.hpp  Mapper.cpp  Mapper.hpp  Memory.cpp  Memory.hpp  Scheduler.cpp  Scheduler.hpp  Timer.cpp  Timer.hpp
src/emulator/core/apu/: APU.cpp  APU.hpp  NoiseChannel.cpp  NoiseChannel.hpp  PulseChannel.cpp  PulseChannel.hpp  WaveChannel.cpp  WaveChannel.hpp
src/emulator/core/cpu/: CPU.cpp  CPU.hpp  Instructions.cpp  mnemonic.hpp
src/emulator/core/ppu/: PPU.cpp  PPU.hpp
src/emulator/device/: AudioDevice.hpp  InputDevice.hpp  VideoDevice.cpp  VideoDevice.hpp
src/frontend/: CMakeLists.txt  SDLAudioDevice.hpp  SDLInputDevice.hpp  SDLVideoDevice.hpp  main.cpp
